
--Fixed appearance of certain held objects, and arm position, after flipping
  character to left or right with mouse movement.  Fixes #657

--Fixed endless looping behavior if custom server address includes a bad
  hostname that gets looked up as invalid instantly.  Fixes #662

--CTRL-right-click on object picker in object editor inserts other object above
  current sprite layer.




Server Fixes

--Server converts all incoming client emails to lower case.  Fixes #659

--Fixed rounding errors in computing fitness ranking.  Fixes #660

--Homelands expire immediately when last member of family dies (before, it
  would wait until no baby was born in homeland for 60 minutes).  Fixes #658

--Fixed a case of transforming an empty basket that is on a table (by adding
  grapes, for example).  Before, this was blocked because the basket was
  potentially a sub-container.

--Server cleans up long runs of spaces between words after removing forbidden
  characters in SAY.  Fixes #653




Version 350    2020-July-16

--Support for +causeAutoOrientV tag (opposite of +causeAutoOrientH).

--Fixed color of background box in category editor to not interfere with long
  text.

--Support for -wall tag in object description, to push what would otherwise be
  drawn in the wall layer into the non-wall layer (so that pipes through fences
  can visually connect properly, and not overlap other pipes in a weird way).

--Fixed case where you drop object on floor at edge of bad biome.  Fixes #654





Server Fixes

--Fixed rare crash when client sends an illegal chat character (impossible with
  official client) when character is drunk.



Version 348    2020-July-10

--Support for moving objects that leave floors behind, or land on and change
  an existing floor.

--Support for road classes, so that logical road can continue across road
  variations (corners, t-junctions, etc.).

--Fixed crash when loading an empty category.
